cmake_minimum_required(VERSION 3.20)
project(cplusplus-primer-plus)

set(CMAKE_CXX_STANDARD 14)

# 编程练习
# 第2章
add_executable(ex02-01 exercises/ch02/ex01.cpp)
add_executable(ex02-02 exercises/ch02/ex02.cpp)
add_executable(ex02-03 exercises/ch02/ex03.cpp)
add_executable(ex02-04 exercises/ch02/ex04.cpp)
add_executable(ex02-05 exercises/ch02/ex05.cpp)
add_executable(ex02-06 exercises/ch02/ex06.cpp)
add_executable(ex02-07 exercises/ch02/ex07.cpp)

# 第3章
add_executable(ex03-01 exercises/ch03/ex01.cpp)
add_executable(ex03-02 exercises/ch03/ex02.cpp)
add_executable(ex03-03 exercises/ch03/ex03.cpp)
add_executable(ex03-04 exercises/ch03/ex04.cpp)
add_executable(ex03-05 exercises/ch03/ex05.cpp)
add_executable(ex03-06 exercises/ch03/ex06.cpp)
add_executable(ex03-07 exercises/ch03/ex07.cpp)