cmake_minimum_required(VERSION 3.20)
project(cplusplus-primer-plus)

set(CMAKE_CXX_STANDARD 14)

# 编程练习
# 第2章
add_executable(ex02-01 exercises/ch02/ex01.cpp)
add_executable(ex02-02 exercises/ch02/ex02.cpp)
add_executable(ex02-03 exercises/ch02/ex03.cpp)
add_executable(ex02-04 exercises/ch02/ex04.cpp)
add_executable(ex02-05 exercises/ch02/ex05.cpp)
add_executable(ex02-06 exercises/ch02/ex06.cpp)
add_executable(ex02-07 exercises/ch02/ex07.cpp)

# 第3章
add_executable(ex03-01 exercises/ch03/ex01.cpp)
add_executable(ex03-02 exercises/ch03/ex02.cpp)
add_executable(ex03-03 exercises/ch03/ex03.cpp)
add_executable(ex03-04 exercises/ch03/ex04.cpp)
add_executable(ex03-05 exercises/ch03/ex05.cpp)
add_executable(ex03-06 exercises/ch03/ex06.cpp)
add_executable(ex03-07 exercises/ch03/ex07.cpp)

# 第4章
add_executable(ex04-01 exercises/ch04/ex01.cpp)
add_executable(ex04-02 exercises/ch04/ex02.cpp)
add_executable(ex04-03 exercises/ch04/ex03.cpp)
add_executable(ex04-04 exercises/ch04/ex04.cpp)
add_executable(ex04-05 exercises/ch04/ex05.cpp)
add_executable(ex04-06 exercises/ch04/ex06.cpp)
add_executable(ex04-07 exercises/ch04/ex07.cpp)
add_executable(ex04-08 exercises/ch04/ex08.cpp)
add_executable(ex04-09 exercises/ch04/ex09.cpp)
add_executable(ex04-10 exercises/ch04/ex10.cpp)

# 第5章
add_executable(ex05-01 exercises/ch05/ex01.cpp)
add_executable(ex05-02 exercises/ch05/ex02.cpp)
add_executable(ex05-03 exercises/ch05/ex03.cpp)
add_executable(ex05-04 exercises/ch05/ex04.cpp)
add_executable(ex05-05 exercises/ch05/ex05.cpp)
add_executable(ex05-06 exercises/ch05/ex06.cpp)
add_executable(ex05-07 exercises/ch05/ex07.cpp)
add_executable(ex05-08 exercises/ch05/ex08.cpp)
add_executable(ex05-09 exercises/ch05/ex09.cpp)
add_executable(ex05-10 exercises/ch05/ex10.cpp)

# 第6章
add_executable(ex06-01 exercises/ch06/ex01.cpp)
add_executable(ex06-02 exercises/ch06/ex02.cpp)
add_executable(ex06-03 exercises/ch06/ex03.cpp)
add_executable(ex06-04 exercises/ch06/ex04.cpp)
add_executable(ex06-05 exercises/ch06/ex05.cpp)
add_executable(ex06-06 exercises/ch06/ex06.cpp)
add_executable(ex06-07 exercises/ch06/ex07.cpp)
add_executable(ex06-08 exercises/ch06/ex08.cpp)
add_executable(ex06-09 exercises/ch06/ex09.cpp)

# 第7章
add_executable(ex07-01 exercises/ch07/ex01.cpp)
add_executable(ex07-02 exercises/ch07/ex02.cpp)
add_executable(ex07-03 exercises/ch07/ex03.cpp)
add_executable(ex07-04 exercises/ch07/ex04.cpp)
add_executable(ex07-05 exercises/ch07/ex05.cpp)
add_executable(ex07-06 exercises/ch07/ex06.cpp)
add_executable(ex07-07 exercises/ch07/ex07.cpp)
add_executable(ex07-08-a exercises/ch07/ex08a.cpp)
add_executable(ex07-08-b exercises/ch07/ex08b.cpp)
add_executable(ex07-09 exercises/ch07/ex09.cpp)
add_executable(ex07-10 exercises/ch07/ex10.cpp)

# 第8章
add_executable(ex08-01 exercises/ch08/ex01.cpp)
add_executable(ex08-02 exercises/ch08/ex02.cpp)
add_executable(ex08-03 exercises/ch08/ex03.cpp)
add_executable(ex08-04 exercises/ch08/ex04.cpp)
add_executable(ex08-05 exercises/ch08/ex05.cpp)
add_executable(ex08-06 exercises/ch08/ex06.cpp)
add_executable(ex08-07 exercises/ch08/ex07.cpp)